# apps/api/src/games/games.module.ts
@@ -9,11 +9,8 @@ import { IgdbService } from '@/lib/igdb.service';
 import { S3Service } from '@/lib/s3.service';
 import { AiService } from '@/lib/ai.service';
 import { R2Service } from '@/lib/r2.service';
-import { ImageGenStore } from '@/image-gen/image-gen.store';
 import { ImageGenService } from '@/image-gen/image-gen.service';
 import { ImageGenRouter } from '@/image-gen/image-gen.router';
-import { SqsService } from '@/lib/sqs.service';
-import { ImageGenConsumer } from '@/image-gen/image-gen.consumer';
 import { ClueRouter } from '@/clue/clue.router';
 import { ClueService } from '@/clue/clue.service';
 
@@ -33,9 +30,6 @@ import { ClueService } from '@/clue/clue.service';
     AiService,
     R2Service,
     ImageGenService,
-    ImageGenStore,
-    SqsService,
-    ImageGenConsumer,
     ClueService,
   ],
   exports: [GamesService, IgdbService],
